tests/fixtures/errors/e0403_clock_as_data.mimz
// expect: E0403
module M {
  clock clk
  in x: bit
  out y: bit
  y = clk & x
}
